--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-uvicorn
-fastapi 
-requests 
-langchain.tools 
-langgraph
-langchain
-openai
-pydantic
+uvicorn==0.24.0
+fastapi==0.104.1
+requests==2.31.0
+langchain==0.1.0
+langchain-openai==0.0.5
+langgraph==0.0.20
+openai==1.3.0
+pydantic==2.5.0
+python-multipart==0.0.6
